--- a/_posts/2020-04-07-记一次sql查询语句性能优化.md
+++ b/_posts/2020-04-07-记一次sql查询语句性能优化.md
@@ -5,7 +5,7 @@ date:   2020-04-07 17:14:39 +0800
 categories: sql coding
 ---
 
->上周发现我写的一个项目，某两个API响应时间竟然长达6.5s，为了进行性能优化，我决定从sql语句的执行情况开始检查
+>上周发现我写的一个项目，某两个API响应时间竟然长达6.5s，为了进行性能优化，我决定从sql语句的执行情况开始检查。
 
 因为使用了`Laravel`自带的ORM，所以要先看一下生成的sql语句，使用`Laravel`自带的`tinker`命令行工具，执行相关代码:
 ```php
