Switch jekyll to hexo

--- a/source/_posts/2020/04_28_记一次sql优化.md
+++ b/source/_posts/2020/04_28_记一次sql优化.md
@@ -1,8 +1,10 @@
 ---
-layout: post
 title:  "记一次sql优化"
 date:   2020-04-28 20:58:35 +0800
-categories: sql coding
+tags:
+  - sql
+categories:
+  - 优化
 ---
 
 >今天筛选爬虫失败的任务的时候，要求出一个子集的补集，使用not in语句效率太慢，后来通过left join实现了性能优化。
